fix(additional-components): add overflow visible to control btn svgs

--- a/packages/core/src/theme-default.css
+++ b/packages/core/src/theme-default.css
@@ -127,6 +127,7 @@
     svg {
       max-width: 12px;
       max-height: 12px;
+      overflow: visible;
     }
 
     &:hover {
